--- a/backend/package.json
+++ b/backend/package.json
@@ -1,22 +1,29 @@
 {
   "name": "alumni-platform-backend",
   "version": "1.0.0",
-  "description": "Backend for Digital Alumni Platform",
+  "description": "Backend API for Alumni Platform",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "create-admin": "node createAdmin.js"
   },
+  "keywords": [
+    "alumni",
+    "platform",
+    "api"
+  ],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-validator": "^7.3.1",
+    "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.8.7",
-    "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1"
+    "mongoose": "^7.5.0",
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
