--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,19 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
-    "framer-motion": "^12.23.24",
+    "chart.js": "^4.5.1",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.19",
+    "framer-motion": "^12.23.26",
     "lucide-react": "^0.263.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.6.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^6.14.2",
     "react-toastify": "^9.1.3",
+    "recharts": "^3.6.0",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
