--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,4 @@ PORT=5000
 MONGODB_URI=mongodb+srv://aniketbedwal90_db_user:aniket2325@cluster0.bk1vuh4.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=your_jwt_secret_key_here_make_it_strong
 NODE_ENV=development
+VITE_API_URL = https://digital-platform-alumini-1.onrender.com
